---
source: tests/strings.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@str_literal = private unnamed_addr constant [7 x i8] c"Value:\00", align 1
@int_format_no_nl = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@float_format_no_nl = private unnamed_addr constant [3 x i8] c"%f\00", align 1
@string_format_no_nl = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@space_format = private unnamed_addr constant [2 x i8] c" \00", align 1
@int_format_no_nl.1 = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@float_format_no_nl.2 = private unnamed_addr constant [3 x i8] c"%f\00", align 1
@string_format_no_nl.3 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@space_format.4 = private unnamed_addr constant [2 x i8] c" \00", align 1
@str_literal.5 = private unnamed_addr constant [4 x i8] c"and\00", align 1
@int_format_no_nl.6 = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@float_format_no_nl.7 = private unnamed_addr constant [3 x i8] c"%f\00", align 1
@string_format_no_nl.8 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@space_format.9 = private unnamed_addr constant [2 x i8] c" \00", align 1
@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define i32 @main() {
entry:
  %malloc_str = call ptr @malloc(i64 7)
  %memcpy_str = call ptr @memcpy(ptr %malloc_str, ptr @str_literal, i64 7)
  %ptr_to_int = ptrtoint ptr %malloc_str to i64
  %ptr_payload = and i64 %ptr_to_int, 281474976710655
  %pyobject_string = or i64 9221683186994511872, %ptr_payload
  %check_qnan = and i64 %pyobject_string, 9221120237041090560
  %is_float = icmp ne i64 %check_qnan, 9221120237041090560
  %tag_bits = and i64 %pyobject_string, 1970324836974592
  %tag = lshr i64 %tag_bits, 48
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %map_bool = select i1 %is_bool, i64 2, i64 %tag
  %map_string = select i1 %is_string, i64 3, i64 %map_bool
  %map_list = select i1 %is_list, i64 4, i64 %map_string
  %final_tag = select i1 %is_float, i64 1, i64 %map_list
  %check_qnan1 = and i64 %pyobject_string, 9221120237041090560
  %is_float2 = icmp ne i64 %check_qnan1, 9221120237041090560
  %i64_to_f64 = bitcast i64 %pyobject_string to double
  %extract_payload = and i64 %pyobject_string, 281474976710655
  %sign_bit = lshr i64 %extract_payload, 47
  %is_negative = icmp eq i64 %sign_bit, 1
  %sign_extend = or i64 %extract_payload, -281474976710656
  %signed_payload = select i1 %is_negative, i64 %sign_extend, i64 %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float2, double %i64_to_f64, double %payload_to_f64
  %is_int = icmp eq i64 %final_tag, 0
  %is_string3 = icmp eq i64 %final_tag, 3
  br i1 %is_string3, label %print_string, label %check_int

check_int:                                        ; preds = %entry
  br i1 %is_int, label %print_int, label %print_float

print_int:                                        ; preds = %check_int
  %to_int = fptosi double %final_payload to i64
  %printf_int = call i32 (ptr, ...) @printf(ptr @int_format_no_nl, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %check_int
  %printf_float = call i32 (ptr, ...) @printf(ptr @float_format_no_nl, double %final_payload)
  br label %print_end

print_string:                                     ; preds = %entry
  %extract_ptr_payload = and i64 %pyobject_string, 281474976710655
  %payload_to_ptr = inttoptr i64 %extract_ptr_payload to ptr
  %printf_string = call i32 (ptr, ...) @printf(ptr @string_format_no_nl, ptr %payload_to_ptr)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  %printf_space = call i32 (ptr, ...) @printf(ptr @space_format)
  br i1 false, label %print_string7, label %check_int4

check_int4:                                       ; preds = %print_end
  br i1 true, label %print_int5, label %print_float6

print_int5:                                       ; preds = %check_int4
  %printf_int9 = call i32 (ptr, ...) @printf(ptr @int_format_no_nl.1, i64 42)
  br label %print_end8

print_float6:                                     ; preds = %check_int4
  %printf_float10 = call i32 (ptr, ...) @printf(ptr @float_format_no_nl.2, double 4.200000e+01)
  br label %print_end8

print_string7:                                    ; preds = %print_end
  %printf_string11 = call i32 (ptr, ...) @printf(ptr @string_format_no_nl.3, ptr inttoptr (i64 42 to ptr))
  br label %print_end8

print_end8:                                       ; preds = %print_string7, %print_float6, %print_int5
  %printf_space12 = call i32 (ptr, ...) @printf(ptr @space_format.4)
  %malloc_str13 = call ptr @malloc(i64 4)
  %memcpy_str14 = call ptr @memcpy(ptr %malloc_str13, ptr @str_literal.5, i64 4)
  %ptr_to_int15 = ptrtoint ptr %malloc_str13 to i64
  %ptr_payload16 = and i64 %ptr_to_int15, 281474976710655
  %pyobject_string17 = or i64 9221683186994511872, %ptr_payload16
  %check_qnan18 = and i64 %pyobject_string17, 9221120237041090560
  %is_float19 = icmp ne i64 %check_qnan18, 9221120237041090560
  %tag_bits20 = and i64 %pyobject_string17, 1970324836974592
  %tag21 = lshr i64 %tag_bits20, 48
  %is_bool22 = icmp eq i64 %tag21, 1
  %is_string23 = icmp eq i64 %tag21, 2
  %is_list24 = icmp eq i64 %tag21, 3
  %map_bool25 = select i1 %is_bool22, i64 2, i64 %tag21
  %map_string26 = select i1 %is_string23, i64 3, i64 %map_bool25
  %map_list27 = select i1 %is_list24, i64 4, i64 %map_string26
  %final_tag28 = select i1 %is_float19, i64 1, i64 %map_list27
  %check_qnan29 = and i64 %pyobject_string17, 9221120237041090560
  %is_float30 = icmp ne i64 %check_qnan29, 9221120237041090560
  %i64_to_f6431 = bitcast i64 %pyobject_string17 to double
  %extract_payload32 = and i64 %pyobject_string17, 281474976710655
  %sign_bit33 = lshr i64 %extract_payload32, 47
  %is_negative34 = icmp eq i64 %sign_bit33, 1
  %sign_extend35 = or i64 %extract_payload32, -281474976710656
  %signed_payload36 = select i1 %is_negative34, i64 %sign_extend35, i64 %extract_payload32
  %payload_to_f6437 = sitofp i64 %signed_payload36 to double
  %final_payload38 = select i1 %is_float30, double %i64_to_f6431, double %payload_to_f6437
  %is_int39 = icmp eq i64 %final_tag28, 0
  %is_string40 = icmp eq i64 %final_tag28, 3
  br i1 %is_string40, label %print_string44, label %check_int41

check_int41:                                      ; preds = %print_end8
  br i1 %is_int39, label %print_int42, label %print_float43

print_int42:                                      ; preds = %check_int41
  %to_int46 = fptosi double %final_payload38 to i64
  %printf_int47 = call i32 (ptr, ...) @printf(ptr @int_format_no_nl.6, i64 %to_int46)
  br label %print_end45

print_float43:                                    ; preds = %check_int41
  %printf_float48 = call i32 (ptr, ...) @printf(ptr @float_format_no_nl.7, double %final_payload38)
  br label %print_end45

print_string44:                                   ; preds = %print_end8
  %extract_ptr_payload49 = and i64 %pyobject_string17, 281474976710655
  %payload_to_ptr50 = inttoptr i64 %extract_ptr_payload49 to ptr
  %printf_string51 = call i32 (ptr, ...) @printf(ptr @string_format_no_nl.8, ptr %payload_to_ptr50)
  br label %print_end45

print_end45:                                      ; preds = %print_string44, %print_float43, %print_int42
  %printf_space52 = call i32 (ptr, ...) @printf(ptr @space_format.9)
  br i1 false, label %print_string56, label %check_int53

check_int53:                                      ; preds = %print_end45
  br i1 false, label %print_int54, label %print_float55

print_int54:                                      ; preds = %check_int53
  %printf_int58 = call i32 (ptr, ...) @printf(ptr @int_format_string, i64 3)
  br label %print_end57

print_float55:                                    ; preds = %check_int53
  %printf_float59 = call i32 (ptr, ...) @printf(ptr @float_format_string, double 3.140000e+00)
  br label %print_end57

print_string56:                                   ; preds = %print_end45
  %printf_string60 = call i32 (ptr, ...) @printf(ptr @string_format_string, ptr inttoptr (i64 33776997205279 to ptr))
  br label %print_end57

print_end57:                                      ; preds = %print_string56, %print_float55, %print_int54
  ret i32 0
}

declare ptr @malloc(i64)

declare ptr @memcpy(ptr, ptr, i64)

declare i32 @printf(ptr, ...)
